--- a/main.html
+++ b/main.html
@@ -47,8 +47,9 @@
 </head>
 <body>
 
-    <form action="#" method="post">
+    <form action="#" method="post"><br><br><br
         <label for="name">Name</label>
+		<br>
         <input type="text" id="name" name="name" required>
 
         <label for="email">Email</label>
