--- a/main.html
+++ b/main.html
@@ -47,9 +47,8 @@
 </head>
 <body>
 
-    <form action="#" method="post"><br><br><br
+    <form action="#" method="post">
         <label for="name">Name</label>
-		<br>
         <input type="text" id="name" name="name" required>
 
         <label for="email">Email</label>
